--- a/MobilPelis.xcodeproj/xcshareddata/xcschemes/MobilPelisDev.xcscheme
+++ b/MobilPelis.xcodeproj/xcshareddata/xcschemes/MobilPelisDev.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6DC13CB227F787EA0017C4C4"
-               BuildableName = "MobilPelisProd copy.app"
+               BuildableName = "MobilPelisDev.app"
                BlueprintName = "MobilPelisDev"
                ReferencedContainer = "container:MobilPelis.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6DC13CB227F787EA0017C4C4"
-            BuildableName = "MobilPelisProd copy.app"
+            BuildableName = "MobilPelisDev.app"
             BlueprintName = "MobilPelisDev"
             ReferencedContainer = "container:MobilPelis.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6DC13CB227F787EA0017C4C4"
-            BuildableName = "MobilPelisProd copy.app"
+            BuildableName = "MobilPelisDev.app"
             BlueprintName = "MobilPelisDev"
             ReferencedContainer = "container:MobilPelis.xcodeproj">
          </BuildableReference>
